# crayTracer

./: .gitignore  CMakeLists.txt  makefile  readme.md
docs/: index.html  readme.md
examples/: sphereExample.c
include/: common.h  graphics.h  sphere.h  tracer.h
sdlView/: main.c
src/: graphics.c  main.c  sphere.c  tracer.c
webView/: main.c  styles.css  tsconfig.json  wasm.syms  web_tracer.wasm
webView/src/: constants.ts  main.ts
